--- a/Modules/Debug/CMakeLists.txt
+++ b/Modules/Debug/CMakeLists.txt
@@ -1,11 +1,7 @@
-set(LIBRARY_NAME              STM32_DEBUG
-)
-set(LIBRARY_DEPENDENCIES
-)
-set(PERIPHERAL_DEPENDENCIES   IO
-)
-set(LIBRARY_SOURCES           Debug.cpp
-)
+set(LIBRARY_NAME STM32_DEBUG)
+set(LIBRARY_DEPENDENCIES)
+set(PERIPHERAL_DEPENDENCIES IO)
+set(LIBRARY_SOURCES Debug.cpp)
 
 message("       -- ${LIBRARY_NAME}")
 
@@ -17,7 +13,5 @@ target_include_directories(${LIBRARY_NAME} INTERFACE ${INCLUDE_PATH})
 
 # Add device-specific periphiral libraries, e.g. STM32F4_IO
 foreach(dependency ${PERIPHERAL_DEPENDENCIES})
-    target_link_libraries(${LIBRARY_NAME} INTERFACE
-        $<TARGET_PROPERTY:DEVICE_FAMILY>_${dependency}
-    )
+    target_link_libraries(${LIBRARY_NAME} INTERFACE $<TARGET_PROPERTY:DEVICE_FAMILY>_${dependency})
 endforeach()
