--- a/Periphirals/STM32F4/IO/CMakeLists.txt
+++ b/Periphirals/STM32F4/IO/CMakeLists.txt
@@ -1,12 +1,6 @@
-set(LIBRARY_NAME           STM32F4_IO
-)
-set(LIBRARY_DEPENDENCIES   HAL::STM32::F4::RCC
-                           HAL::STM32::F4::GPIO
-                           HAL::STM32::F4::CORTEX
-                           CMSIS::STM32::F4                        
-)
-set(LIBRARY_SOURCES        IO.cpp
-)
+set(LIBRARY_NAME STM32F4_IO)
+set(LIBRARY_DEPENDENCIES HAL::STM32::F4::RCC HAL::STM32::F4::GPIO HAL::STM32::F4::CORTEX CMSIS::STM32::F4)
+set(LIBRARY_SOURCES IO.cpp)
 
 message("       -- ${LIBRARY_NAME}")
 
