--- a/Periphirals/STM32H7/PWM/CMakeLists.txt
+++ b/Periphirals/STM32H7/PWM/CMakeLists.txt
@@ -1,14 +1,12 @@
-set(LIBRARY_NAME           STM32H7_PWM
-)
-set(LIBRARY_DEPENDENCIES   HAL::STM32::H7::M7::TIM
-                           HAL::STM32::H7::M7::TIMEx
-                           HAL::STM32::H7::M7::RCC
-                           HAL::STM32::H7::M7::GPIO
-                           HAL::STM32::H7::M7::CORTEX
-                           CMSIS::STM32::H7::M7
-)
-set(LIBRARY_SOURCES        PWM.cpp
-)
+set(LIBRARY_NAME STM32H7_PWM)
+set(LIBRARY_DEPENDENCIES
+    HAL::STM32::H7::M7::TIM
+    HAL::STM32::H7::M7::TIMEx
+    HAL::STM32::H7::M7::RCC
+    HAL::STM32::H7::M7::GPIO
+    HAL::STM32::H7::M7::CORTEX
+    CMSIS::STM32::H7::M7)
+set(LIBRARY_SOURCES PWM.cpp)
 
 message("       -- ${LIBRARY_NAME}")
 
