--- a/Periphirals/STM32H7/SMBus/CMakeLists.txt
+++ b/Periphirals/STM32H7/SMBus/CMakeLists.txt
@@ -1,15 +1,12 @@
-set(LIBRARY_NAME           STM32H7_SMBUS
-        )
+set(LIBRARY_NAME STM32H7_SMBUS)
 set(LIBRARY_DEPENDENCIES
-        HAL::STM32::H7::M7::I2C
-        HAL::STM32::H7::M7::SMBUS
-        HAL::STM32::H7::M7::RCC
-        HAL::STM32::H7::M7::GPIO
-        HAL::STM32::H7::M7::CORTEX
-        CMSIS::STM32::H7::M7
-        )
-set(LIBRARY_SOURCES        SMBus.cpp
-        )
+    HAL::STM32::H7::M7::I2C
+    HAL::STM32::H7::M7::SMBUS
+    HAL::STM32::H7::M7::RCC
+    HAL::STM32::H7::M7::GPIO
+    HAL::STM32::H7::M7::CORTEX
+    CMSIS::STM32::H7::M7)
+set(LIBRARY_SOURCES SMBus.cpp)
 
 message("       -- ${LIBRARY_NAME}")
 
