--- a/Periphirals/STM32H7/UART/CMakeLists.txt
+++ b/Periphirals/STM32H7/UART/CMakeLists.txt
@@ -1,14 +1,12 @@
-set(LIBRARY_NAME           STM32H7_UART
-        )
-set(LIBRARY_DEPENDENCIES   HAL::STM32::H7::M7::UART
-        HAL::STM32::H7::M7::DMA
-        HAL::STM32::H7::M7::RCC
-        HAL::STM32::H7::M7::GPIO
-        HAL::STM32::H7::M7::CORTEX
-        CMSIS::STM32::H7::M7
-        )
-set(LIBRARY_SOURCES        UART.cpp
-        )
+set(LIBRARY_NAME STM32H7_UART)
+set(LIBRARY_DEPENDENCIES
+    HAL::STM32::H7::M7::UART
+    HAL::STM32::H7::M7::DMA
+    HAL::STM32::H7::M7::RCC
+    HAL::STM32::H7::M7::GPIO
+    HAL::STM32::H7::M7::CORTEX
+    CMSIS::STM32::H7::M7)
+set(LIBRARY_SOURCES UART.cpp)
 
 message("       -- ${LIBRARY_NAME}")
 
