--- a/Periphirals/STM32H7/ADC/CMakeLists.txt
+++ b/Periphirals/STM32H7/ADC/CMakeLists.txt
@@ -14,8 +14,10 @@ message("       -- ${LIBRARY_NAME}")
 
 add_library(${LIBRARY_NAME} INTERFACE)
 target_sources(${LIBRARY_NAME} INTERFACE ${LIBRARY_SOURCES})
-target_link_libraries(${LIBRARY_NAME} INTERFACE ${LIBRARY_DEPENDENCIES})
+target_link_libraries(${LIBRARY_NAME}
+                      INTERFACE ${LIBRARY_DEPENDENCIES})
 get_filename_component(INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/.." ABSOLUTE)
 target_include_directories(${LIBRARY_NAME} INTERFACE ${INCLUDE_PATH})
 
+# Defines STM32H7_ADC_USE_DEBUG when option is enabled
 add_library_option(${LIBRARY_NAME} DEBUG STM32_DEBUG)
