--- a/Periphirals/STM32G4/PrecisionSysTick/CMakeLists.txt
+++ b/Periphirals/STM32G4/PrecisionSysTick/CMakeLists.txt
@@ -4,15 +4,17 @@
 # Default frequency can be changed with
 
 set(LIBRARY_NAME STM32G4_PrecisionSysTick)
-set(LIBRARY_DEPENDENCIES HAL::STM32::G4::TIM HAL::STM32::G4::CORTEX CMSIS::STM32::G4)
+set(LIBRARY_DEPENDENCIES
+    HAL::STM32::G4::TIM
+    HAL::STM32::G4::CORTEX
+    CMSIS::STM32::G4)
 set(LIBRARY_SOURCES PrecisionSysTick.c)
 
 message("       -- ${LIBRARY_NAME}")
 
 add_library(${LIBRARY_NAME} INTERFACE)
 target_sources(${LIBRARY_NAME} INTERFACE ${LIBRARY_SOURCES})
-target_link_libraries(${LIBRARY_NAME}
-                      INTERFACE ${LIBRARY_DEPENDENCIES})
+target_link_libraries(${LIBRARY_NAME} INTERFACE ${LIBRARY_DEPENDENCIES})
 get_filename_component(INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/.." ABSOLUTE)
 target_include_directories(${LIBRARY_NAME} INTERFACE ${INCLUDE_PATH})
 
