--- a/Periphirals/STM32G4/IO/CMakeLists.txt
+++ b/Periphirals/STM32G4/IO/CMakeLists.txt
@@ -15,4 +15,4 @@ get_filename_component(INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/.." ABSOLUTE)
 target_include_directories(${LIBRARY_NAME} INTERFACE ${INCLUDE_PATH})
 
 # Defines STM32G4_IO_USE_DEBUG when option is enabled
-add_library_option(${LIBRARY_NAME} DEBUG STM32_DEBUG)
+add_library_option(${LIBRARY_NAME} DEBUG STM32_Debug)
