--- a/Misc/NonlinearLeastSquares/CMakeLists.txt
+++ b/Misc/NonlinearLeastSquares/CMakeLists.txt
@@ -16,4 +16,4 @@ get_filename_component(INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/.." ABSOLUTE)
 target_include_directories(${LIBRARY_NAME} INTERFACE ${INCLUDE_PATH})
 
 # Defines NONLINEARLEASTSQUARES_USE_DEBUG when option is enabled
-add_library_option(${LIBRARY_NAME} DEBUG Debug)
+add_library_option_with_dependency(${LIBRARY_NAME} DEBUG Debug)
