--- a/Modules/Debug/CMakeLists.txt
+++ b/Modules/Debug/CMakeLists.txt
@@ -20,7 +20,7 @@ endforeach()
 
 # Define the type of DEBUG interface for PRINTF support
 # Select using e.g. 'enable_option(your_target Debug "UART")'
-add_library_option(${LIBRARY_NAME} UART $<TARGET_PROPERTY:DEVICE_FAMILY>_UART)
-add_library_option(${LIBRARY_NAME} LSPC LSPC_)
+add_library_option_with_dependency(${LIBRARY_NAME} UART $<TARGET_PROPERTY:DEVICE_FAMILY>_UART)
+add_library_option_with_dependency(${LIBRARY_NAME} LSPC LSPC)
 add_library_option(${LIBRARY_NAME} PRINTF)
 add_library_option(${LIBRARY_NAME} VERBOSE)
